@@ -1,8 +1,8 @@
 package com.cognizant.hams.service.Impl;
 
 import com.cognizant.hams.dto.Request.DoctorAvailabilityDTO;
+import com.cognizant.hams.dto.Response.DoctorAndAvailabilityResponseDTO;
 import com.cognizant.hams.dto.Response.DoctorAvailabilityResponseDTO;
-import com.cognizant.hams.dto.Response.DoctorDetailsResponseDTO;
 import com.cognizant.hams.entity.Doctor;
 import com.cognizant.hams.entity.DoctorAvailability;
 import com.cognizant.hams.exception.APIException;
@@ -17,7 +17,6 @@ import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -55,7 +54,7 @@ public class DoctorAvailabilityServiceImpl implements DoctorAvailabilityService 
         List<DoctorAvailability> availabilities = doctorAvailabilityRepository.findByDoctorDoctorId(doctorId);
         return availabilities.stream()
                 .map(availability -> modelMapper.map(availability, DoctorAvailabilityResponseDTO.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // Delete Availability Slot
@@ -74,13 +73,13 @@ public class DoctorAvailabilityServiceImpl implements DoctorAvailabilityService 
     }
 
     @Override
-    public List<DoctorAvailabilityResponseDTO> getAvailableDoctor(String doctorName){
+    public List<DoctorAndAvailabilityResponseDTO> getAvailableDoctor(String doctorName){
         return doctorRepository.findByAvailableDoctorNameAndAvailability(doctorName);
     }
 
 
     @Override
-    public List<DoctorAvailabilityResponseDTO> searchDoctorByName(String doctorName){
+    public List<DoctorAndAvailabilityResponseDTO> searchDoctorByName(String doctorName){
         return doctorRepository.findByDoctorNameAndAvailability(doctorName);
     }
 }
